After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 607804 - Crashes when editing an event, if stock icons are missing
Crashes when editing an event, if stock icons are missing
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: general
2.30.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Evolution Shell Maintainers Team
Evolution QA team
Depends on:
Blocks:
 
 
Reported: 2010-01-22 20:19 UTC by Gustavo Noronha (kov)
Modified: 2013-09-13 01:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fallback to missing image if a stock icon is not found (1.34 KB, patch)
2010-01-22 20:21 UTC, Gustavo Noronha (kov)
none Details | Review
fallback to missing image (1.28 KB, patch)
2010-01-22 20:37 UTC, Gustavo Noronha (kov)
committed Details | Review

Description Gustavo Noronha (kov) 2010-01-22 20:19:48 UTC
My application, based on Evolution libraries is crashing when it is run in a very raw environment when I open the dialog to edit the event. The stack trace is fairly obvious: evo can't find stock icons, and tries to use NULL as if it was a pixbuf. The attached patch fixes it.
Comment 1 Gustavo Noronha (kov) 2010-01-22 20:21:02 UTC
Created attachment 152034 [details] [review]
fallback to missing image if a stock icon is not found
Comment 2 Gustavo Noronha (kov) 2010-01-22 20:37:18 UTC
Created attachment 152036 [details] [review]
fallback to missing image
Comment 3 Matthew Barnes 2010-01-22 20:38:43 UTC
Looks good, go ahead and commit.
Comment 4 Gustavo Noronha (kov) 2010-01-22 20:51:48 UTC
Comment on attachment 152036 [details] [review]
fallback to missing image

Pushed as 7173ba4e07cb964fd5a8c340dedf20e0b4c61aab.