Fallback to missing image, when a stock icon could not be found

https://bugzilla.gnome.org/show_bug.cgi?id=607804